@@ -2,32 +2,36 @@ package br.com.utfpr.gerenciamento.server.service.impl;
 
 import br.com.utfpr.gerenciamento.server.dto.NadaConstaResponseDto;
 import br.com.utfpr.gerenciamento.server.enumeration.NadaConstaStatus;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaEmitidoEvent;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaPendenciasEvent;
 import br.com.utfpr.gerenciamento.server.exception.NadaConstaException;
 import br.com.utfpr.gerenciamento.server.model.Emprestimo;
 import br.com.utfpr.gerenciamento.server.model.NadaConsta;
 import br.com.utfpr.gerenciamento.server.model.Usuario;
 import br.com.utfpr.gerenciamento.server.repository.NadaConstaRepository;
-import br.com.utfpr.gerenciamento.server.service.EmailService;
 import br.com.utfpr.gerenciamento.server.service.EmprestimoService;
 import br.com.utfpr.gerenciamento.server.service.NadaConstaService;
 import br.com.utfpr.gerenciamento.server.service.SystemConfigService;
 import br.com.utfpr.gerenciamento.server.service.UsuarioService;
-import br.com.utfpr.gerenciamento.server.util.DateUtil;
 import br.com.utfpr.gerenciamento.server.util.EmailUtils;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+/**
+ * Implementação do serviço de operações relacionadas ao Nada Consta.
+ *
+ * <p>Responsável por gerenciar solicitações, verificação de pendências, invalidação e conversão de
+ * entidades Nada Consta.
+ */
 @Slf4j
 @Service
 public class NadaConstaServiceImpl extends CrudServiceImpl<NadaConsta, Long, NadaConstaResponseDto>
@@ -37,22 +41,22 @@ public class NadaConstaServiceImpl extends CrudServiceImpl<NadaConsta, Long, Nad
   private final UsuarioService usuarioService;
   private final ModelMapper modelMapper;
   private final EmprestimoService emprestimoService;
-  private final EmailService emailService;
   private final SystemConfigService systemConfigService;
+  private final ApplicationEventPublisher eventPublisher;
 
   public NadaConstaServiceImpl(
       NadaConstaRepository nadaConstaRepository,
       UsuarioService usuarioService,
       ModelMapper modelMapper,
       EmprestimoService emprestimoService,
-      EmailService emailService,
-      SystemConfigService systemConfigService) {
+      SystemConfigService systemConfigService,
+      ApplicationEventPublisher eventPublisher) {
     this.nadaConstaRepository = nadaConstaRepository;
     this.usuarioService = usuarioService;
     this.modelMapper = modelMapper;
     this.emprestimoService = emprestimoService;
-    this.emailService = emailService;
     this.systemConfigService = systemConfigService;
+    this.eventPublisher = eventPublisher;
   }
 
   @Override
@@ -60,11 +64,23 @@ public class NadaConstaServiceImpl extends CrudServiceImpl<NadaConsta, Long, Nad
     return nadaConstaRepository;
   }
 
+  /**
+   * Converte uma entidade NadaConsta para um NadaConstaResponseDto.
+   *
+   * @param entity Entidade NadaConsta a ser convertida
+   * @return DTO correspondente à entidade NadaConsta
+   */
   @Override
   public NadaConstaResponseDto toDto(NadaConsta entity) {
     return modelMapper.map(entity, NadaConstaResponseDto.class);
   }
 
+  /**
+   * Converte um NadaConstaResponseDto para a entidade NadaConsta.
+   *
+   * @param nadaConstaResponseDto DTO de resposta a ser convertido
+   * @return Entidade NadaConsta correspondente
+   */
   @Override
   public NadaConsta toEntity(NadaConstaResponseDto nadaConstaResponseDto) {
     return modelMapper.map(nadaConstaResponseDto, NadaConsta.class);
@@ -80,6 +96,12 @@ public class NadaConstaServiceImpl extends CrudServiceImpl<NadaConsta, Long, Nad
     return nadaConstaRepository.findAllByUsuario(usuario).stream().map(this::toDto).toList();
   }
 
+  /**
+   * Solicita uma declaração de Nada Consta para o usuário informado.
+   *
+   * @param documento Documento do usuário
+   * @return Dados da solicitação de Nada Consta
+   */
   @Override
   @Transactional
   public NadaConstaResponseDto solicitarNadaConsta(String documento) {
@@ -95,69 +117,131 @@ public class NadaConstaServiceImpl extends CrudServiceImpl<NadaConsta, Long, Nad
     List<Emprestimo> emprestimosAbertos =
         emprestimoService.findAllEmprestimosAbertosByUsuario(usuario.getUsername()).stream()
             .map(emprestimoService::toEntity)
-            .collect(Collectors.toList());
+            .toList();
     NadaConsta nadaConsta =
         NadaConsta.builder()
             .usuario(usuario)
-            .status(NadaConstaStatus.PENDING)
+            .status(
+                emprestimosAbertos.isEmpty()
+                    ? NadaConstaStatus.COMPLETED
+                    : NadaConstaStatus.PENDING)
             .createdAt(LocalDateTime.now())
             .createdBy(usuario.getUsername())
             .build();
+    nadaConsta.setSendAt(LocalDateTime.now());
     nadaConsta = nadaConstaRepository.save(nadaConsta);
+    usuario.setAtivo(false);
+    usuarioService.save(usuario);
+
     if (emprestimosAbertos.isEmpty()) {
-      // Buscar e-mail de destino via SystemConfigService
       String destinatario = systemConfigService.getEmailNadaConsta();
-      // Monta dados para o template
-      DateTimeFormatter formatter =
-          DateTimeFormatter.ofPattern("dd 'de' MMMM 'de' yyyy").withLocale(DateUtil.PT_BR);
+      if (!EmailUtils.isValidEmail(destinatario)) {
+        log.warn("Email de Nada Consta não enviado - email do sistema inválido: {}", destinatario);
+        return toDto(nadaConsta);
+      }
       Map<String, Object> templateData = new HashMap<>();
-      templateData.put("nomeAluno", usuario.getNome());
-      templateData.put("registroAcademico", usuario.getDocumento());
-      templateData.put("dataFormatada", LocalDateTime.now().format(formatter));
-      templateData.put("logoUrl", systemConfigService.getLogoUrl());
-      emailService.sendEmailWithTemplate(
-          templateData, destinatario, "Declaração Nada Consta", "nada-consta-declaracao.html");
-      nadaConsta.setStatus(NadaConstaStatus.COMPLETED);
-      nadaConsta.setSendAt(LocalDateTime.now());
-      nadaConstaRepository.save(nadaConsta);
-      usuario.setAtivo(false);
-      usuarioService.save(usuario);
+      templateData.put("usuario", usuario);
+      templateData.put("nadaConsta", nadaConsta);
+      eventPublisher.publishEvent(new NadaConstaEmitidoEvent(this, destinatario, templateData));
     } else {
-      // Monta lista de itens pendentes para o template
-      List<Map<String, Object>> itensPendentesTemplate = new ArrayList<>();
-      for (Emprestimo emp : emprestimosAbertos) {
-        if (emp.getEmprestimoItem() != null) {
-          for (var emprestimoItem : emp.getEmprestimoItem()) {
-            Map<String, Object> itemMap = new HashMap<>();
-            var item = emprestimoItem.getItem();
-            itemMap.put("itemNome", item != null ? item.getNome() : "-");
-            itemMap.put(
-                "dataEmprestimo", emp.getDataEmprestimo().format(DateUtil.BR_DATE_FORMATTER));
-            itemMap.put(
-                "dataPrevistaDevolucao",
-                emp.getPrazoDevolucao() != null
-                    ? emp.getPrazoDevolucao().format(DateUtil.BR_DATE_FORMATTER)
-                    : "-");
-            itensPendentesTemplate.add(itemMap);
-          }
-        }
+      String destinatario = usuario.getEmail();
+      if (!EmailUtils.isValidEmail(destinatario)) {
+        log.warn(
+            "Email de pendências de Nada Consta não enviado - usuário sem email válido: {}",
+            usuario.getNome());
+        return toDto(nadaConsta);
       }
       Map<String, Object> templateData = new HashMap<>();
-      templateData.put("nomeAluno", usuario.getNome());
-      templateData.put("emprestimos", itensPendentesTemplate);
-      String to = usuario.getEmail();
-      if (!EmailUtils.isValidEmail(to)) {
-        log.warn("Email inválido ou ausente para usuário {}", usuario.getUsername());
-        throw new IllegalStateException("E-mail do usuário ausente para envio de pendências.");
-      }
-      emailService.sendEmailWithTemplate(
-          templateData, to, "Pendências de Empréstimos", "pendencias-emprestimos.html");
-      nadaConsta.setStatus(NadaConstaStatus.PENDING);
-      nadaConsta.setSendAt(LocalDateTime.now());
-      nadaConstaRepository.save(nadaConsta);
-      usuario.setAtivo(false);
-      usuarioService.save(usuario);
+      templateData.put("usuario", usuario);
+      templateData.put(
+          "emprestimos",
+          emprestimosAbertos.stream()
+              .flatMap(
+                  e ->
+                      e.getEmprestimoItem() != null
+                          ? e.getEmprestimoItem().stream()
+                          : java.util.stream.Stream.empty())
+              .map(
+                  item -> {
+                    Map<String, Object> map = new HashMap<>();
+                    map.put("itemNome", item.getItem() != null ? item.getItem().getNome() : null);
+                    return map;
+                  })
+              .toList());
+      eventPublisher.publishEvent(new NadaConstaPendenciasEvent(this, destinatario, templateData));
     }
     return toDto(nadaConsta);
+  }
+
+  /**
+   * Verifica se as pendências do usuário foram resolvidas e atualiza o status da solicitação.
+   * Dispara evento de conclusão caso não haja pendências.
+   *
+   * @param id Identificador da solicitação de Nada Consta
+   * @return Dados atualizados da solicitação
+   */
+  @Override
+  @Transactional
+  public NadaConstaResponseDto verificarPendenciasNadaConsta(Long id) {
+    NadaConsta nadaConsta =
+        nadaConstaRepository
+            .findById(id)
+            .orElseThrow(() -> new NadaConstaException("Nada Consta não encontrado."));
+    if (nadaConsta.getStatus() != NadaConstaStatus.PENDING) {
+      throw new NadaConstaException("Nada Consta não está com status PENDING.");
+    }
+    Usuario usuario = nadaConsta.getUsuario();
+    List<Emprestimo> emprestimosAbertos =
+        emprestimoService.findAllEmprestimosAbertosByUsuario(usuario.getUsername()).stream()
+            .map(emprestimoService::toEntity)
+            .toList();
+    if (emprestimosAbertos.isEmpty()) {
+      nadaConsta.setStatus(NadaConstaStatus.COMPLETED);
+      nadaConstaRepository.save(nadaConsta);
+      // Dispara evento de conclusão
+      String destinatario = systemConfigService.getEmailNadaConsta();
+      if (EmailUtils.isValidEmail(destinatario)) {
+        Map<String, Object> templateData = new HashMap<>();
+        templateData.put("usuario", usuario);
+        templateData.put("nadaConsta", nadaConsta);
+        eventPublisher.publishEvent(new NadaConstaEmitidoEvent(this, destinatario, templateData));
+      } else {
+        log.warn("Email de Nada Consta não enviado - email do sistema inválido: {}", destinatario);
+      }
+    }
+    return convertToDto(nadaConsta);
+  }
+
+  /**
+   * Invalida uma declaração de Nada Consta emitida. Atualiza o status para INVALIDATED e reativa o
+   * usuário vinculado. Interpreta que o aluno retornou para estudo na universidade.
+   *
+   * @param id Identificador da solicitação de Nada Consta
+   * @return Dados atualizados da solicitação
+   */
+  @Override
+  @Transactional
+  public NadaConstaResponseDto invalidarNadaConsta(Long id) {
+    NadaConsta nadaConsta =
+        nadaConstaRepository
+            .findById(id)
+            .orElseThrow(() -> new NadaConstaException("Nada Consta não encontrado."));
+    if (nadaConsta.getStatus() != NadaConstaStatus.COMPLETED) {
+      throw new NadaConstaException(
+          "Só é possível invalidar Nada Consta emitido (status COMPLETED).");
+    }
+    nadaConsta.setStatus(NadaConstaStatus.INVALIDATED);
+    nadaConstaRepository.save(nadaConsta);
+    // Reativa o usuário vinculado
+    Usuario usuario = nadaConsta.getUsuario();
+    usuario.setAtivo(true);
+    usuarioService.save(usuario);
+    log.info("Nada Consta id={} invalidado (status INVALIDATED) e usuário reativado.", id);
+    return convertToDto(nadaConsta);
+  }
+
+  @Override
+  public NadaConstaResponseDto convertToDto(NadaConsta entity) {
+    return modelMapper.map(entity, NadaConstaResponseDto.class);
   }
 }
